# softserve-task

./: CMakeLists.txt  LICENSE  README.md  meta.yaml
src/: handler.cpp  handler.hpp  main.cpp
